--- a/starter-code/scss/_layout.scss
+++ b/starter-code/scss/_layout.scss
@@ -1,38 +1,775 @@
-.hero-section {
-  max-width: 1100px;     
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 4rem 1rem;
+/*========================
+=        GLOBAL         =
+========================*/
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
 
-  .hero-text {
-    margin: 0 auto 25px;
-    max-width: 450px;
+  p {
+    color: #7d7d7d;
+  }
+}
+
+.features {
+  .tabs-section {
+    input[type="radio"] {
+      display: none;
+    }
+  }
+}
+
+
+
+/*========================
+=      MOBILE STYLES     =
+========================*/
+@media (max-width: 768px) {
+  .desktop-nav {
+    display: none;
   }
 
-  .hero-img {
-    max-width: 400px;     
-    margin: 0 auto;
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background: white;
+    margin: 0 30px;
 
-    img {
-      width: 100%;
+    nav {
+      hr {
+        width: 70%; 
+        border: none; 
+        border-top: 1px solid #7d7d7d; 
+        margin: 1rem 0; 
+      }
+    }
+
+    .logo img {
+      width: 200px;
       height: auto;
+    }
+
+    #menu-toggle {
+      display: none;
+    }
+
+    .menu-icon {
+      display: block;
+      width: 25px;
+      cursor: pointer;
+
+      img {
+        width: 100%;
+        display: block;
+      }
+    }
+
+    nav {
+      position: fixed;
+      top: 0;
+      right: -100%;
+      width: 200px;
+      height: 100vh;
+      background: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 4rem;
+      transition: 0.3s;
+
+      a {
+        text-decoration: none;
+        color: #ffffff;
+        margin: 1rem 0;
+        font-size: 18px;
+        letter-spacing: 2px;
+
+        &:last-of-type {
+          border: 2px solid white;
+          border-radius: 5px;
+          padding: 10px 130px;
+        }
+
+      }
+
+      img {
+        margin-right: 30px;
+        filter: brightness(0) invert(1);
+        margin-bottom: 1.2rem;
+      }
+
+      .close {
+        margin-top: 5px;
+        margin-left: 140px;
+        width: 15px;
+        height: 15px;
+      }
+
+
+    }
+
+    #menu-toggle:checked~nav {
+      right: 0%;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(4, 9, 46, 0.877);
     }
   }
 
-  @media (min-width: 768px) {
-    flex-direction: row;
-    text-align: left;
-    justify-content: center;
+  /* HERO SECTION */
+  .hero-section {
+    text-align: center;
+
+    .hero-text {
+      h1 {
+        color: #323232;
+      }
+
+      p {
+        max-width: 350px;
+        margin: 0 auto 25px;
+      }
+    }
+
+    .hero-img img {
+      width: 450px;
+      height: auto;
+      margin-top: 50px;
+    }
+  }
+
+
+/* FEATURES */
+.features {
+  margin-top: 100px;
+
+  h2 {
+    text-align: center; 
+  }
+
+  p {
+    max-width: 350px;
+    margin: 0 auto 25px;
+    text-align: center; 
+    margin-bottom: 3rem;
+  }
+
+  .tab-labels-mobile {
+    display: flex;            
+    flex-direction: column;   
+    align-items: center;      
+    gap: 1rem;
+
+    label {
+      display: block;
+      width: auto;            
+      text-align: center;    
+      font-size: 20px;
+      color: #7d7d7d;
+      padding-bottom: 1rem;
+      cursor: pointer;
+    }
+
+    hr {
+      width: 60%;
+      border: none;
+      border-top: 1px solid #7d7d7d;
+      margin-top: -1rem;
+    }
+  }
+
+  .tabs-section {
+    input[type="radio"] {
+      display: none;
+    }
+
+    .tab-content {
+      display: none;
+      margin-top: 3rem;
+      text-align: center;
+
+      img {
+        width: 100%;
+        max-width: 400px;
+        margin: 0 auto; 
+        display: block;
+      }
+
+      h3 {
+        font-size: 25px;
+      }
+    }
+
+    #simpleBookmarking:checked ~ #firstOptionContent,
+    #speedySearching:checked ~ #content-speedy,
+    #easySharing:checked ~ #content-easy {
+      display: block;
+    }
+
+    #simpleBookmarking:checked ~ .tab-labels-mobile label[for="simpleBookmarking"],
+    #speedySearching:checked ~ .tab-labels-mobile label[for="speedySearching"],
+    #easySharing:checked ~ .tab-labels-mobile label[for="easySharing"] {
+      border-bottom: 3px solid orange;
+    }
+  }
+
+  .tab-labels-desktop {
+    display: none;
+  }
+
+  .tabs-divider { 
+    display: none;
+  }
+
+  .btn-moreinfo {
+    display: none;
+  }
+}
+
+
+
+  /* DOWNLOAD SECTION */
+  .download-section {
+  h2 {
+    margin-top: 4rem;
+    text-align: center; 
+  }
+
+  p {
+    max-width: 350px;
+    margin: 0 auto 25px;
+    text-align: center; 
+  }
+
+  .card-container {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1.5rem;
+
+    .card {
+      width: 280px;
+      padding: 24px 20px;
+      border-radius: 16px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+      text-align: center;
+
+      .logo-card {
+        width: 100%;
+        max-width: 150px;
+        margin-top: 3rem;
+      }
+
+      button {
+        margin-top: 1.5rem; 
+      }
+    }
+  }
+}
+
+
+  /* FAQ SECTION */
+.FAQs-section {
+  text-align: center;
+
+  p {
+    max-width: 350px;
+    margin: 0 auto 25px;
+  }
+
+  .questions-container {
+    max-width: 70%;
+    margin: 30px auto;
+
+    summary {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-weight: bold;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+
+    .arrow-icon {
+      width: 16px;
+      height: 12px;
+      transition: transform 0.3s;
+    }
+
+    details[open] .arrow-icon {
+      transform: rotate(180deg);
+    }
+
+    hr {
+      width: 100%;
+      max-width: 22rem;
+      margin: 1rem 0; 
+    }
+
+    details p {
+      text-align: left; 
+      max-width: 100%; 
+      margin-top: 0.8rem;
+    }
+  }
+
+  
+}
+
+
+  /* SIGN-UP SECTION */
+  .sign-up-section {
+    display: flex;
+    padding: 2rem 0 4rem;
+    background-color: #4b5eff;
+    color: white;
+    text-align: center;
+
+    p {
+      color: white;
+    }
+
+    h2 {
+      max-width: 350px;
+      margin: 0 auto 25px;
+    }
+
+    input {
+      width: 70%;
+      padding: 10px;
+      border-radius: 4px;
+      border: none;
+    }
+
+     button {
+      
+      margin-top: 1rem;
+      border: none;
+      border-radius: 4px;
+      padding: 10px 140px 10px 140px;
+      background-color: rgb(253, 69, 28);
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+
+    
+    }
+  }
+
+  /* FOOTER */
+  footer {
+    background-color: #33323d;
+    color: white;
+    padding-bottom: 3rem;
+
+    .links {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
+
+      img {
+        width: 200px;
+        filter: brightness(0) invert(1);
+        margin: 2rem 0;
+      }
+
+      a {
+        color: #b7b7b7;
+
+        &:hover {
+          color: orange;
+        }
+      }
+    }
+
+    .image-links {
+      margin-top: 2rem;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+
+      img {
+        width: 20px;
+        cursor: pointer;
+
+        &:hover {
+          filter: brightness(0) saturate(100%) invert(47%) sepia(85%) saturate(2757%) hue-rotate(358deg) brightness(102%) contrast(105%);
+        }
+      }
+    }
+  }
+}
+
+/*========================
+=      DESKTOP STYLES     =
+========================*/
+@media (min-width: 769px) {
+
+  .menu-icon,
+  #menu-toggle,
+  .mobile-nav {
+    display: none;
+  }
+
+  .desktop-nav {
+    display: flex;
+
+    ul {
+      display: flex;
+      gap: 1.5rem;
+      list-style: none;
+      margin-right: 19rem;
+
+      li a {
+        text-decoration: none;
+        color: rgb(63, 63, 63);
+        font-size: 12px;
+
+        &:hover {
+          color: rgb(255, 111, 0);
+        }
+      }
+    }
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1rem;
+    background: white;
+
+    .logo img {
+      width: 140px;
+      height: auto;
+      margin-left: 15rem;
+    }
+  }
+
+  p {
+    color: rgb(172, 172, 172);
+  }
+
+  /* HERO */
+  .hero-section {
+    display: flex;
+    align-items: center;
+    margin-left: 9rem;
+
+    .hero-text {
+      order: 1;
+      margin: 0 auto 25px;
+      max-width: 450px;
+
+      h1 span {
+        font-size: 40px;
+      }
+    }
 
     .hero-img {
       order: 2;
-      max-width: 600px;   
-      margin: 0;
+      margin-top: 2rem;
+      margin-right: 9rem;
+
+      img {
+        max-width: 600px;
+        width: 100%;
+      }
+    }
+  }
+
+  /* FEATURES */
+  .features {
+    margin-top: 2rem;
+    text-align: center;
+
+    p {
+      max-width: 450px;
+      margin: 0 auto 25px;
+    }
+
+    .tab-labels-desktop {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin-bottom: 0.5rem;
+
+
+      label {
+        cursor: pointer;
+        width: 180px;
+        padding-bottom: 1rem;
+        text-align: center;
+        border-bottom: 3px solid transparent;
+
+        &:hover {
+          color: rgb(255, 111, 0);
+        }
+      }
+
+    }
+
+    .tabs-divider {
+
+      width: 40%;
+      height: 1px;
+      border: none;
+      background-color: #ccc;
+      margin: 0.5rem auto;
+      margin-top: -0.50rem;
+
+    }
+
+
+
+    .tabs-section {
+      .tab-content {
+        display: none;
+        margin-top: 3rem;
+        margin-bottom: 6rem;
+
+        img {
+          width: 100%;
+          max-width: 400px;
+        }
+
+        h3 {
+          font-size: 30px;
+        }
+
+        p {
+          max-width: 350px;
+        }
+      }
+
+      .tab-labels-mobile {
+        display: none;
+      }
+
+      #simpleBookmarking:checked~#firstOptionContent,
+      #speedySearching:checked~#content-speedy,
+      #easySharing:checked~#content-easy {
+        display: flex;
+        justify-content: center;
+        text-align: left;
+        gap: 100px;
+      }
+
+      #simpleBookmarking:checked~.tab-labels-desktop label[for="simpleBookmarking"],
+      #speedySearching:checked~.tab-labels-desktop label[for="speedySearching"],
+      #easySharing:checked~.tab-labels-desktop label[for="easySharing"] {
+        border-bottom: 3px solid orange;
+      }
+    }
+  }
+
+
+  /* DOWNLOAD */
+  .download-section {
+    text-align: center;
+    margin-bottom: 3rem;
+
+    p {
+      max-width: 500px;
+      margin: 0 auto;
+    }
+
+    .card-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 1.5rem;
+
+      .card {
+        width: 260px;
+        padding: 50px 20px 60px 20px;
+        border-radius: 16px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+
+        &:nth-child(2) {
+          margin-top: 5rem;
+        }
+
+        &:nth-child(3) {
+          margin-top: 10rem;
+        }
+
+        img {
+
+          margin-bottom: 1rem;
+        }
+
+        p {
+
+          margin-bottom: 1rem;
+        }
+      }
+    }
+  }
+
+  /* FAQ SECTION */
+  .FAQs-section {
+    text-align: center;
+
+    p {
+      max-width: 450px;
+      margin: 0 auto 25px;
+    }
+
+    .asked-questions-title {
+      margin-top: 4rem;
+    }
+
+    .questions-container {
+      max-width: 550px;
+      width: 100%;
+      margin: 50px auto;
+
+      summary {
+        cursor: pointer;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: bold;
+        font-size: 1rem;
+        border-radius: 5px;
+
+        &:hover {
+          color: #ff9b04;
+        }
+
+      }
+
+      .arrow-icon {
+        width: 18px;
+        height: 12px;
+        transition: transform 0.3s;
+      }
+
+      details[open] .arrow-icon {
+        transform: rotate(180deg);
+        filter: brightness(0) saturate(100%) invert(47%) sepia(85%) saturate(2757%) hue-rotate(358deg) brightness(102%) contrast(105%);
+      }
+
+      hr {
+        width: 35rem;
+        margin: 1.2rem 0;
+      }
+    }
+
+    details {
+      p {
+        text-align: left;
+        margin-top: 0.5rem;
+        margin-left: 0px;
+      }
+    }
+  }
+
+  /* SIGN UP SECTION */
+ .sign-up-section {
+  display: flex;
+  flex-direction: column;
+  padding-top: 3rem;
+  padding-bottom: 5rem;
+  background-color: #4b5eff;
+  color: white;
+  align-items: center;
+  text-align: center;
+
+  p {
+    color: white;
+  }
+
+  h2 {
+    max-width: 300px;
+    margin: 0 auto 25px;
+  }
+
+  .sign-up-button {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+    width: 100%;
+    max-width: 500px;
+
+    input {
+      flex: 1;
+      padding: 10px 4rem;
+      border-radius: 4px;
+      border: none;
+    }
+
+    button {
+      padding: 10px 20px;
+      border-radius: 4px;
+      border: none;
+      background-color: rgb(253, 69, 28);
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #faf9f9;
+        color: rgb(255, 134, 4);
+        box-shadow: inset 0 0 0 1px rgb(255, 134, 4);
+      }
+    }
+  }
+}
+
+
+  /* FOOTER */
+  footer {
+    display: flex;
+    background-color: #33323d;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 2rem;
+
+    .links {
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+      margin-left: 15rem;
+
+      img {
+        width: 150px;
+        filter: brightness(0) invert(1);
+      }
+
+      a {
+        margin-left: 0.5rem;
+        color: #b7b7b7;
+
+        &:hover {
+          color: orange;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .image-links {
+      display: flex;
+      margin-right: 13rem;
+
+      img {
+        width: 20px;
+        margin-right: 2rem;
+
+        &:hover {
+          filter: brightness(0) saturate(100%) invert(47%) sepia(85%) saturate(2757%) hue-rotate(358deg) brightness(102%) contrast(105%);
+          cursor: pointer;
+        }
+      }
     }
   }
 }
